--- a/src/main/resources/templates/createexpense.html
+++ b/src/main/resources/templates/createexpense.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>g
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 	<head th:replace="fragments/header.html :: head">
 	</head>
