--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
   <head>
   </head>
   <body>
-    <footer class="footer" th:fragment="tail">
+    <footer class="footer bg-primary" th:fragment="tail">
       <p class="text-center text-warning text-bold"> Tricount Corporate<br> Wild code school 2021</p>
       <script>
         function openNav() {
