--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,7 +14,7 @@
 
 <body>
 <header th:fragment="header">
-    <div class="n navbar-dark bg-primary">
+    <div class="n navbar-dark bg-primary hd-container">
         <span class="menuaccess" onclick="openNav()">&#9776; Menu</span>
         <a href="/" class="pageTitleLink"><h1 class="pageTitle text-warning">TriCount<br>Share your expenses</h1></a>
     </div>
