--- a/src/main/resources/templates/balanceexpenses.html
+++ b/src/main/resources/templates/balanceexpenses.html
@@ -50,8 +50,8 @@
 					</div>
 					<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3" >
 				</div>
-				<a class="text-decoration-none" th:href="@{/expenselistdetails/{id}(id=${balExpenseDto.idOfExpenseList})}">
-					<button type="button" class="btn btn-labeled btn-rounded btn-warning text-white float-end">Back to ExpenseList</button>
+				<a class="text-decoration-none" th:href="${previous}">
+					<button type="button" class="btn btn-labeled btn-rounded btn-warning text-white float-end">Back</button>
 				</a>
 				
 			</form>
