--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 		<th id="content" class="p-4 p-md-5 pt-5">
 			<h1 class="text-center text-warning m-4">My expenses lists</h1>
 			
-			<th:block th:each="expenses, state : ${expenseslistsdto}">
+			<th:block th:each="expenselist, state : ${expenseslistsdto}">
 	<!--			Bootstrap modal div for confirmation windows pop-up -->
 				<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="deleteListLabel" aria-hidden="true">
 					<div class="modal-dialog">
@@ -39,13 +39,13 @@
 
 				<div class="row mt-5 col-md-8 offset-md-2 col-xs-10 offset-xs-1">
 					<div class="row mb-3 px-0">
-						<h2 class="col text-primary" th:text="${expenses.name}"></h2>
-						<a class="col-auto text-decoration-none px-1" th:href="@{/expenselistdetails/{id}(id=${expenses.id})}">
+						<h2 class="col text-primary" th:text="${expenselist.name}"></h2>
+						<a class="col-auto text-decoration-none px-1" th:href="@{/expenselistdetails/{id}(id=${expenselist.id})}">
 							<button type="button" class="btn btn-outline-primary">
 								<i class="bi-pencil"></i>
 							</button>
 						</a>
-						<a class="col-auto text-decoration-none px-1" th:data-href="@{/expenseslist/delete/{idList}(idList=${expenses.id})}" data-bs-toggle="modal" data-bs-target="#confirm-delete">
+						<a class="col-auto text-decoration-none px-1" th:data-href="@{/expenseslist/delete/{idList}(idList=${expenselist.id})}" data-bs-toggle="modal" data-bs-target="#confirm-delete">
 							<button type="button" class="btn btn-outline-primary">
 								<i class="bi-trash"></i>
 							</button>
