Added 'required' on beneficiary fields for expense creation and update to make sure an expense always benefits to a participants

--- a/src/main/resources/templates/createexpense.html
+++ b/src/main/resources/templates/createexpense.html
@@ -75,7 +75,7 @@
 							<label for="beneficiaries">Beneficiaries :</label>
 						</div>
 						<div class="col-4 col-sm-4">
-							<select  id="beneficiaries" name="idBeneficiaries[]" multiple autocomplete="on">
+							<select id="beneficiaries" name="idBeneficiaries[]" multiple autocomplete="on" required>
 								<option th:each="contact : ${createexpensedto.readExpenseListDto.contactDtoList}"
 										th:value="${contact.id}"
 										th:utext="${contact.name}"
