--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 	<main class="position-relative">
 	
 		<!-- Fixed button for expense list creation -->
-		<div id="collapse-add-button" class="position-fixed bottom-0 end-0 m-5">
+		<div id="collapse-add-button" class="position-fixed bottom-0 end-0">
 			<a class="text-decoration-none" href="/createlist">
 					<i class="bi-plus-circle-fill fa-4x"></i>
 			</a>
@@ -55,7 +55,7 @@
 					<table class="table table-striped">
 						<thead>
 							<tr>
-								<th>Last expenses</th>
+								<th>Last three expenses</th>
 								<th>Made by</th>
 								<th>Amount</th>
 								<th>View</th>
