--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -19,6 +19,10 @@ hr:last-child {
 	text-decoration: none;
 }
 
+.hd-container {
+	height: 120px;
+}
+
 /*****
 Some buttons css
  */
@@ -28,4 +32,8 @@ Some buttons css
 
 h2 {
 	margin-bottom: 25px;
+}
+
+.container{
+	padding-top: 60px;
 }
