--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -3,147 +3,173 @@
 <head th:replace="fragments/header.html :: head">
 </head>
 <body>
-<header th:replace="fragments/header.html :: header"></header>
-	<section>
+	<header th:replace="fragments/header.html :: header"></header>
+	<main>
 	<h1 class="text-center text-primary m-4">Manage Contacts</h1>
-	<div class = "row mr-1">
+	<div class="row mr-1">
 		<div class="col-md-12 text-center">
-    		<button type="button" class="btn btn-block btn-primary" data-bs-toggle="modal" data-bs-target="#modal-new_contact">Add a new contact</button>
+			<button type="button" class="btn btn-block btn-primary"
+				data-bs-toggle="modal" data-bs-target="#modal-new_contact">Add
+				a new contact</button>
 		</div>
 	</div>
-	
-	<div class="modal fade" id="modal-new_contact" tabindex="-1" aria-labelledby="newContactLabel" aria-hidden="true">
-	  <div class="modal-dialog">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <h5 class="modal-title" id="newContactLabel">Create Contact</h5>
-	        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-	      </div>
-	      <form action="/contact" method="post" th:object="${contact}">
-	      <div class="modal-body">
-		      <div class="container-fluid">
-		        Enter informations for the contact:<br>
-		        <div class="row">
-		        	<div class="col">
-		        		<label>Name:</label>
-		        	</div>
-			        <div class="col">
-			        	<input name="name" class="form-control" type="text" th:field="*{name}">
-			        </div>
-			    </div>
-		        <div class="row">
-		        	<div class="col">
-				        <label>Email:</label>
-		    	    </div>
-		        	<div class="col">
-		        		<input name="email" class="form-control" type="text" th:field="*{email}" placeholder="email@domain.com" pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}">
-		        	</div>
-		        </div>
-		      </div>
-		  </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-	        <button type="submit" class="btn btn-primary">Save</button>
-	      </div>
-	      </form>
-	    </div>
-	  </div>
+
+	<div class="modal fade" id="modal-new_contact" tabindex="-1"
+		aria-labelledby="newContactLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="newContactLabel">Create Contact</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal"
+						aria-label="Close"></button>
+				</div>
+				<form action="/contact" method="post" th:object="${contact}">
+					<div class="modal-body">
+						<div class="container-fluid">
+							Enter informations for the contact:<br>
+							<div class="row">
+								<div class="col">
+									<label>Name:</label>
+								</div>
+								<div class="col">
+									<input name="name" class="form-control" type="text"
+										th:field="*{name}">
+								</div>
+							</div>
+							<div class="row">
+								<div class="col">
+									<label>Email:</label>
+								</div>
+								<div class="col">
+									<input name="email" class="form-control" type="text"
+										th:field="*{email}" placeholder="email@domain.com"
+										pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}">
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary"
+							data-bs-dismiss="modal">Cancel</button>
+						<button type="submit" class="btn btn-primary">Save</button>
+					</div>
+				</form>
+			</div>
+		</div>
 	</div>
-	
-	
+
+
 	<th:block th:each="contact, status : ${contacts}">
-		<div class="container mr-1">
+		<div class="row mt-5 col-md-8 offset-md-2 col-xs-10 offset-xs-1">
 			<div class="row">
 				<div class="col col-md-auto">
 					<img src="Images/silhouette.jpg" alt="contact" height="60px">
 				</div>
 				<div class="col">
 					<div class="row">
-						<div class = "col" th:text="${contact.name}">Name</div>
-						<div class = "col col-md-auto">
-							<input type="image" data-bs-toggle="modal" th:attr="data-bs-target=${'#modaleditcontact'+status.index}" 
-							id="btnEditContact" src="Images/crayon.jpg" alt="Edit" height="26px" width="26px" >
+						<div class="col" th:text="${contact.name}">Name</div>
+						<div class="col col-md-auto">
+							<input type="image" data-bs-toggle="modal"
+								th:attr="data-bs-target=${'#modaleditcontact'+status.index}"
+								id="btnEditContact" src="Images/crayon.jpg" alt="Edit"
+								height="26px" width="26px">
 						</div>
 					</div>
 					<div class="row">
-						<div class = "col" th:text="${contact.email}">Email</div>
-						<div class = "col col-md-auto">
-							<input type="image" data-bs-toggle="modal" th:attr="data-bs-target=${'#modaldelcontact'+status.index}" 
-							id="btnDelContact" src="Images/delete.jpg" alt="Delete" height="26px" width="26px" >
+						<div class="col" th:text="${contact.email}">Email</div>
+						<div class="col col-md-auto">
+							<input type="image" data-bs-toggle="modal"
+								th:attr="data-bs-target=${'#modaldelcontact'+status.index}"
+								id="btnDelContact" src="Images/delete.jpg" alt="Delete"
+								height="26px" width="26px">
 						</div>
 					</div>
 					<!--  Modal Update -->
-					<div class="modal fade" th:attr="id=${'modaleditcontact'+status.index}" tabindex="-1" 
-					aria-labelledby="editContactLabel" aria-hidden="true">
-					  <div class="modal-dialog">
-					    <div class="modal-content">
-					      <div class="modal-header">
-					        <h5 class="modal-title">Edit Contact</h5>
-					        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					      </div>
-					      <form action="/contact" method="post" th:object="${contact}">
-						      <div class="modal-body">
-							      <div class="container-fluid">
-							        Update informations for the contact:<br>
-							        <div class="row">
-							        	<div class="col">
-							        		<label>Name:</label>
-							        	</div>
-								        <div class="col">
-								        	<input name="name" class="form-control" type="text" th:value=${contact.name}>
-								        </div>
-								    </div>
-							        <div class="row">
-							        	<div class="col">
-									        <label>Email:</label>
-							    	    </div>
-							        	<div class="col">
-							        		<input name="email" class="form-control" type="text" th:value=${contact.email} placeholder="email@domain.com" pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}">
-							        	</div>
-							        	<input class="d-none" type="number" name="id" th:value=${contact.id}>
-							        </div>
-							      </div>
-						      </div>
-						      <div class="modal-footer">
-						        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-						        <button type="submit" class="btn btn-primary">Save</button>
-						      </div>
-					      </form>
-					    </div>
-					  </div>
+					<div class="modal fade"
+						th:attr="id=${'modaleditcontact'+status.index}" tabindex="-1"
+						aria-labelledby="editContactLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title">Edit Contact</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal"
+										aria-label="Close"></button>
+								</div>
+								<form action="/contact" method="post" th:object="${contact}">
+									<div class="modal-body">
+										<div class="container-fluid">
+											Update informations for the contact:<br>
+											<div class="row">
+												<div class="col">
+													<label>Name:</label>
+												</div>
+												<div class="col">
+													<input name="name" class="form-control" type="text"
+														th:value=${contact.name}>
+												</div>
+											</div>
+											<div class="row">
+												<div class="col">
+													<label>Email:</label>
+												</div>
+												<div class="col">
+													<input name="email" class="form-control" type="text"
+														th:value=${contact.email} placeholder="email@domain.com"
+														pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}">
+												</div>
+												<input class="d-none" type="number" name="id"
+													th:value=${contact.id}>
+											</div>
+										</div>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary"
+											data-bs-dismiss="modal">Cancel</button>
+										<button type="submit" class="btn btn-primary">Save</button>
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
 
 					<!--  Modal Delete -->
-					<div class="modal modal-warning fade" th:attr="id=${'modaldelcontact'+status.index}" tabindex="-1" aria-labelledby="delContactLabel" aria-hidden="true">
-					  <div class="modal-dialog">
-					    <div class="modal-content">
-					      <div class="modal-header">
-					        <h5 class="modal-title" id="delContactLabel">Delete Contact</h5>
-					        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-					      </div>
-					      <form action="/del_contact" method="post" th:object="${contact}">
-						      <div class="modal-body">
-								<h3>Are you sure you want to delete this contact?</h3>	      
+					<div class="modal modal-warning fade"
+						th:attr="id=${'modaldelcontact'+status.index}" tabindex="-1"
+						aria-labelledby="delContactLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="delContactLabel">Delete
+										Contact</h5>
+									<button type="button" class="btn-close" data-bs-dismiss="modal"
+										aria-label="Close"></button>
 								</div>
-								<input class="d-none" type="number" name="id" th:value=${contact.id}>  
-						      <div class="modal-footer">
-						        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-						        <button type="submit" class="btn btn-danger" id="btnDelContactSave">Delete</button>
-						      </div>
-					      </form>
-					    </div>
-					  </div>
+								<form action="/del_contact" method="post" th:object="${contact}">
+									<div class="modal-body">
+										<h3>Are you sure you want to delete this contact?</h3>
+									</div>
+									<input class="d-none" type="number" name="id"
+										th:value=${contact.id}>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary"
+											data-bs-dismiss="modal">Cancel</button>
+										<button type="submit" class="btn btn-danger"
+											id="btnDelContactSave">Delete</button>
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
 
 				</div>
 			</div>
 		</div>
-<!-- 		Separator : hidden if is the last, visible otherwise  -->
-		<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3" th:classappend="${status.last} ? 'd-none' : 'd-block'">
-	</th:block>
-
-
-		<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
+		<!-- 		Separator : hidden if is the last, visible otherwise  -->
+		<hr
+			class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3"
+			th:classappend="${status.last} ? 'd-none' : 'd-block'">
+	</th:block> </main>
+	<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
 
 </body>
 </html>
