Expense list details shows the same icons for edition and deletion as index page, deleting an expense redirect to previous page (either index or expense list details) changed binoculars icon on index page to have the same look than edit and delete expense list icons

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/style_menu.css">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-<!--    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">-->
+<!--    favicon courtesy of : Freepik | at href="https://www.freepik.com" -->
 </head>
 
 <body>
