--- a/src/main/resources/templates/expenselistdetails.html
+++ b/src/main/resources/templates/expenselistdetails.html
@@ -41,7 +41,7 @@
                 <th>Expense name</th>
                 <th>Made by</th>
                 <th>Amount</th>
-                <th>Beneficiaries</th>
+                <th>Beneficiary.ies</th>
                 <th>Date</th>
                 <th>Action</th>
               </tr>
@@ -57,12 +57,14 @@
                 <td th:text="${readexpensedto.expenseDate}">Expense date</td>
                 <td>
                   <a class="text-decoration-none" th:href="@{/updateexpense/{id}(id=${readexpensedto.id})}">
-                    <button type="button" class="btn btn-labeled btn-success">
-                      <span class="btn-label"><i class="bi-pencil"></i></span></button>
+                    <button type="button" class="btn btn-outline-primary">
+                      <i class="bi-pencil"></i>
+                    </button>
                   </a>
                   <a class="text-decoration-none" th:href="@{/expense/delete/{id}(id=${readexpensedto.id})}" data-toggle="modal" data-target="#confirm-delete">
-                    <button type="button" class="btn btn-labeled btn-danger">
-                      <span class="btn-label"><i class="bi-trash"></i></span></button>
+                    <button type="button" class="btn btn-outline-primary">
+                      <i class="bi-trash"></i>
+                    </button>
                   </a>
                 </td>
               </tr>
