--- a/src/main/resources/templates/updateexpense.html
+++ b/src/main/resources/templates/updateexpense.html
@@ -83,7 +83,7 @@
 					
 					<br />
 					<div class="modal-footer">
-						<a th:href="${previous}" class="btn secondary" role="button">Cancel</a>
+						<a th:href="${previous}" class="btn btn-secondary" role="button">Cancel</a>
 						<button type="submit" class="btn btn-primary">Update</button>
 					</div>
 					<br>
