--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,8 +13,12 @@
 			</a>
 		</div>
 		<div id="add-list-container" class="text-center text-white bg-primary position-fixed bottom-0 end-0 rounded-pill">
-				<span id="add-list-label"><a class="text-decoration-none text-white" href="/createlist">Create new list</a></span>
-				<i class="bi-plus add-icon"></i>
+				<a class="text-decoration-none text-white" href="/createlist">
+					<span id="add-list-label">Create new list</span>
+					<svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+  						<path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+					</svg>
+				</a>
 		</div>
 		
 		<th id="content" class="p-4 p-md-5 pt-5">
