--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,6 +7,8 @@
       <div class="container">
       <p class="text-center text-warning text-bold "> Tricount Corporate<br> Wild code school 2021</p>
       </div>
+      <script src="/bootstrap/js/bootstrap.min.js"></script>
+      <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
       <script>
         function openNav() {
           document.getElementById("mySidenav").style.width = "15%";
@@ -16,7 +18,7 @@
         }
         closeNav();
       </script>
-      <script src="/js/jquery-3.2.1.slim.min.js"></script>
+<!--      <script src="/js/jquery-3.2.1.slim.min.js"></script>-->
       <script src="/bootstrap/js/bootstrap.min.js"></script>
       <script src="/bootstrap/js/bootstrap.bundle.min.js"></script>
       <script src="https://kit.fontawesome.com/8e8aa578fc.js" crossorigin="anonymous"></script>
