--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,82 +12,76 @@
 					<i class="bi-plus-circle-fill fa-4x"></i>
 			</a>
 		</div>
-		
-		<th id="content" class="p-4 p-md-5 pt-5">
-			<h1 class="text-center text-warning m-4">My expenses lists</h1>
-			
-			<th:block th:each="expenselist, state : ${expenseslistsdto}">
-	<!--			Bootstrap modal div for confirmation windows pop-up -->
-				<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="deleteListLabel" aria-hidden="true">
-					<div class="modal-dialog">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title" id="deleteListLabel">Confirm Delete</h5>
-								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-							</div>
-							<div class="modal-body">
-								<p>You are about to delete an expense list, this action cannot be undone.</p>
-								<p>Do you want to proceed?</p>
-							</div>
-							<div class="modal-footer">
-								<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-								<a class="btn btn-danger btn-ok">Delete</a>
-							</div>
+
+		<h1 class="text-center text-warning m-4">My expenses lists</h1>
+		<th:block th:each="expenselist, state : ${expenseslistsdto}">
+			<div class="modal fade" th:attr="id=${'deletelist'+expenselist.id}" tabindex="-1" role="dialog" aria-labelledby="deleteListLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="deleteListLabel">Confirm Delete</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+							<p>You are about to delete an expense list, this action cannot be undone.</p>
+							<p>Do you want to proceed?</p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+							<a th:href="@{/expenseslist/delete/{idList}(idList=${expenselist.id})}" class="btn btn-danger btn-ok">Delete</a>
 						</div>
 					</div>
 				</div>
-
-				<div class="row mt-5 col-md-8 offset-md-2 col-xs-10 offset-xs-1">
-					<div class="row mb-3 px-0">
-						<h2 class="col text-primary" th:text="${expenselist.name}"></h2>
-						<a class="col-auto text-decoration-none px-1" th:href="@{/expenselistdetails/{id}(id=${expenselist.id})}">
-							<button type="button" class="btn btn-outline-primary">
-								<i class="bi-pencil"></i>
-							</button>
-						</a>
-						<a class="col-auto text-decoration-none px-1" th:data-href="@{/expenseslist/delete/{idList}(idList=${expenselist.id})}" data-bs-toggle="modal" data-bs-target="#confirm-delete">
-							<button type="button" class="btn btn-outline-primary">
-								<i class="bi-trash"></i>
-							</button>
-						</a>
-					</div>
-
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<th>Last expenses</th>
-								<th>Made by</th>
-								<th>Amount</th>
-								<th>View</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr th:each="expense : ${expenselist.idExpenses}">
-								<td th:text="${expense.name}">Expense Name</td>
-								<td th:text="${expense.owner.name}">Expense owner</td>
-								<td th:text="${expense.amount}">Expense amount</td>
-								<td>
-									<a class="text-decoration-none" th:href="@{/updateexpense/{id}(id=${expense.id})}">
-										<button type="button" class="btn btn-outline-primary">
-											<i class="bi-binoculars"></i>
-										</button>
-<!--										<button type="button" class="btn btn-labeled btn-primary">-->
-<!--											<span class="btn-label"><i class="bi-binoculars-fill"></i></span></button>-->
-									</a>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-					<div class="row px-0 mx-0">
-						<a class="text-decoration-none px-0" th:href="@{/createexpense/{id}(id=${expenselist.id})}">
-							<button type="button" class="btn btn-labeled btn-rounded btn-warning text-white float-end" title="Add an expense to this list">
-								<span class="btn-label"><i class="bi-plus-circle-fill"></i> Add an expense</span>
-							</button>
-						</a>
-					</div>
+			</div>
+			<div class="row mt-5 col-md-8 offset-md-2 col-xs-10 offset-xs-1">
+				<div class="row mb-3 px-0">
+					<h2 class="col text-primary" th:text="${expenselist.name}"></h2>
+					<a class="col-auto text-decoration-none px-1" th:href="@{/expenselistdetails/{id}(id=${expenselist.id})}">
+						<button type="button" class="btn btn-outline-primary">
+							<i class="bi-pencil"></i>
+						</button>
+					</a>
+					<a class="col-auto text-decoration-none px-1" data-bs-toggle="modal" th:attr="data-bs-target=${'#deletelist'+expenselist.id}">
+						<button type="button" class="btn btn-outline-primary">
+							<i class="bi-trash"></i>
+						</button>
+					</a>
 				</div>
-				<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3"><br />
-			</th:block>
+
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th>Last expenses</th>
+							<th>Made by</th>
+							<th>Amount</th>
+							<th>View</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="expense : ${expenselist.idExpenses}">
+							<td th:text="${expense.name}">Expense Name</td>
+							<td th:text="${expense.owner.name}">Expense owner</td>
+							<td th:text="${expense.amount}">Expense amount</td>
+							<td>
+								<a class="text-decoration-none" th:href="@{/updateexpense/{id}(id=${expense.id})}">
+									<button type="button" class="btn btn-outline-primary">
+										<i class="bi-binoculars"></i>
+									</button>
+								</a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="row px-0 mx-0">
+					<a class="text-decoration-none px-0" th:href="@{/createexpense/{id}(id=${expenselist.id})}">
+						<button type="button" class="btn btn-labeled btn-rounded btn-warning text-white float-end" title="Add an expense to this list">
+							<span class="btn-label"><i class="bi-plus-circle-fill"></i> Add an expense</span>
+						</button>
+					</a>
+				</div>
+			</div>
+			<hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3"><br />
+		</th:block>
 	</main>
 
 	<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
