--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-	<footer class="footer mt-4 bg-primary" th:fragment="tail">
+	<footer class="footer mt-auto bg-primary" th:fragment="tail">
 		<div>
 			<p class="text-center text-warning text-bold mb-0">Tricount Corporate</p>
 			<p class="text-center text-warning text-bold mb-0">Wild code school 2021</p>
