--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,7 +1,3 @@
-body {
-	
-}
-
 section {
 	min-height: 100%;
 	margin-bottom: -50px;
@@ -65,6 +61,6 @@ h2 {
 	margin-bottom: 25px;
 }
 
-.container{
+/* .container{
 	padding-top: 60px;
-}
+} */
