review update expense

--- a/src/main/resources/templates/updateexpense.html
+++ b/src/main/resources/templates/updateexpense.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" class="h-100">
 	<head th:replace="fragments/header.html :: head">
 	</head>
-	<body>
+	<body class="d-flex flex-column h-100">
 		<header th:replace="fragments/header.html :: header"></header>
-		<section>
+		<main class="flex-shrink-0">
 		<div class="container">
-<!-- 			<h1 class="text-center text-warning"
-				th:text="${updateexpensedto.readExpenseListDto.name}"></h1> -->
 			<h2 class="text-center text-primary m-4">Update an expense</h2>
 			
 			<form action="#" method="POST" th:action="@{/expense/update}" th:object="${updateexpensedto}" >
@@ -89,7 +87,7 @@
 					<br>
 			</form>
 		</div>
-	</section>
+		</main>
 	<footer class="footer" th:replace="fragments/footer.html :: tail"></footer>
 <!--	 Put TomSelect Js code (for config) below the fragment :: -->
 		<script>
