--- a/src/main/resources/templates/updateexpense.html
+++ b/src/main/resources/templates/updateexpense.html
@@ -80,11 +80,10 @@
 					<br />
 					
 					<br />
-					<div class="modal-footer">
-						<a th:href="${previous}" class="btn btn-secondary" role="button">Cancel</a>
-						<button type="submit" class="btn btn-primary">Update</button>
+					<div class="row float-end">
+						<a th:href="${previous}" class="btn btn-secondary col-auto" role="button">Cancel</a>
+						<button type="submit" class="btn btn-primary col-auto ms-3">Update</button>
 					</div>
-					<br>
 			</form>
 		</div>
 		</main>
