--- a/src/main/resources/templates/expenselistdetails.html
+++ b/src/main/resources/templates/expenselistdetails.html
@@ -20,7 +20,7 @@
         </select>
         <br /><br />
         <input type="submit" value="Update List" class="btn btn-primary">
-        <a th:href="${previous}" class="btn btn-secondary" role="button">Cancel</a>
+        <a href="/" class="btn btn-secondary" role="button">Back</a>
       </form><br /><br />
 
       <hr class="col-md-4 offset-md-4 border-2 border-top border-warning mt-3">
