--- a/src/main/resources/templates/balanceexpenses.html
+++ b/src/main/resources/templates/balanceexpenses.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" class="h-100">
 	<head th:replace="fragments/header.html :: head">
 	</head>
-	<body>
+	<body class="d-flex flex-column h-100">
 	<header th:replace="fragments/header.html :: header"></header>
 	<main>
 		<div class="container">
