--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" class="h-100">
 	<head th:replace="fragments/header.html :: head">
 	</head>
-	<body>
+	<body class="d-flex flex-column h-100">
 	<header th:replace="fragments/header.html :: header"></header>
-	<main class="position-relative">
+	<main class="position-relative flex-shrink-0">
 	
 		<!-- Fixed button for expense list creation -->
  		<div id="add-list-button" class="position-fixed bottom-0 end-0">
