rollback unless on details table

--- a/src/main/resources/templates/expenselistdetails.html
+++ b/src/main/resources/templates/expenselistdetails.html
@@ -51,7 +51,7 @@
 			</button>
 		</a>
 
-		<div class="row mt-5" th:unless="${#lists.size(updateexpenselistdto) > 0}">
+		<div class="row mt-5" >
 			<table class="table table-striped">
 				<thead>
 					<tr>
